# menu-manager-API

./: .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
backend/: DockerFile  docker-entrypoint.sh
manager/: admin.py  models.py  serializers.py  urls.py  views.py
manager/migrations/: 0001_initial.py
menu_manager/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: DockerFile  conf.d
