[tool.poetry]
name = "menu-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "menu_api"}]

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.7.2"
django = "4.2.4"
django-rest-framework = "0.1.0"
django-rest-multiple-models = "2.1.3"
djangorestframework = "3.14.0"
psycopg2-binary = "2.9.7"
pytz = "2023.3"
sqlparse = "0.4.4"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
